Update HTML domain name and add SplineViewer class for 3D rendering

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html data-wf-domain="MediSense" data-wf-page="67dbaf8a0c22857f90281739" data-wf-site="67dbaf8a0c22857f90281733" lang="en">
+<html data-wf-domain="MediSense by Tensor Devs" data-wf-page="67dbaf8a0c22857f90281739" data-wf-site="67dbaf8a0c22857f90281733" lang="en">
     <head>
         <meta charset="utf-8"/>
         <title>MediSense by Tenso rDevs</title>
