Update header title in dashboard.html to reflect correct branding

--- a/dashboard.html
+++ b/dashboard.html
@@ -44,7 +44,7 @@
 <body class="bg-background-light dark:bg-background-dark font-sans text-text-light dark:text-text-dark">
 <div class="p-6">
 <header class="flex justify-between items-center mb-6">
-<h1 class="text-2xl font-bold text-text-light dark:text-text-dark">Africa PHC Analytics</h1>
+<h1 class="text-2xl font-bold text-text-light dark:text-text-dark">Medisense Analytics</h1>
 <div class="flex items-center space-x-4">
 <div class="flex items-center space-x-2 bg-card-light dark:bg-card-dark border border-border-light dark:border-border-dark rounded-lg px-3 py-2">
 <span class="text-text-light-secondary dark:text-text-dark-secondary">Country</span>
