Implement code changes to enhance functionality and improve performance

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                         </div>
                     </div>
                     <div data-w-id="a32b4782-c26c-8ef9-dc8d-2bde6eca1c2c" style="opacity:0" class="spline-block">
-                        <div class="spline-scene" data-w-id="888555f8-1390-0981-e2e9-c9ab48dfc7bf" data-animation-type="spline" data-spline-url="https://prod.spline.desiign/e4thK5GcAcuS1xQZ/scene.splinecode">
+                        <div class="spline-scene" data-w-id="888555f8-1390-0981-e2e9-c9ab48dfc7bf" data-animation-type="spline" data-spline-url="https://prod.spline.design/e4thK5GcAcuS1xQZ/scene.splinecode">
                             <canvas></canvas>
                         </div>
                     </div>
@@ -216,34 +216,19 @@
             </div>
 
             <!-- Map Graphic -->
-            <div class="bg-primary p-6 rounded-lg shadow-lg">
-            <div class="relative w-full">
-                <svg viewBox="0 0 800 800" xmlns="http://www.w3.org/2000/svg" class="w-full h-auto">
-                <!-- Simplified Africa SVG outline -->
-                <path d="M400,20 C200,80 80,300 150,500 C200,650 400,780 600,700 C720,640 780,520 740,400 C700,280 650,150 500,80 C460,60 430,30 400,20Z" fill="#004e91" stroke="#fff" stroke-width="2"/>
+<div class="bg-primary p-6 rounded-lg shadow-lg hover:-translate-y-1 hover:shadow-xl transition-all duration-500">
+  <div class="relative w-full">
+    <img 
+      src="img/1.webp" 
+      alt="3D Africa Map" 
+      class="w-full h-auto rounded-lg object-cover"
+    />
+    <!-- Optional overlay text -->
+    <div class="absolute inset-0 flex flex-col justify-center items-center text-white text-center bg-black/30 rounded-lg">
+    </div>
+  </div>
+</div>
 
-                <!-- Nigeria -->
-                <circle cx="380" cy="420" r="10" class="fill-red-500 hover:scale-125 transition-transform duration-300 cursor-pointer">
-                    <title>🇳🇬 Nigeria – Only ~20% of PHCs fully functional</title>
-                </circle>
-
-                <!-- Kenya -->
-                <circle cx="520" cy="460" r="8" class="fill-yellow-400 hover:scale-125 transition-transform duration-300 cursor-pointer">
-                    <title>🇰🇪 Kenya – Diagnostic shortage at PHC level</title>
-                </circle>
-
-                <!-- South Africa -->
-                <circle cx="470" cy="640" r="10" class="fill-blue-400 hover:scale-125 transition-transform duration-300 cursor-pointer">
-                    <title>🇿🇦 South Africa – Logistics & supply issues</title>
-                </circle>
-
-                <!-- DRC -->
-                <circle cx="460" cy="480" r="9" class="fill-green-400 hover:scale-125 transition-transform duration-300 cursor-pointer">
-                    <title>🇨🇩 DRC – Limited access to rural healthcare</title>
-                </circle>
-                </svg>
-            </div>
-            </div>
 
         </div>
         </section>
