--- a/index.html
+++ b/index.html
@@ -215,24 +215,178 @@
                 </div>
             </div>
 
-            <!-- Map Graphic -->
-<div class="bg-primary p-6 rounded-lg shadow-lg hover:-translate-y-1 hover:shadow-xl transition-all duration-500">
-  <div class="relative w-full">
-    <img 
-      src="img/1.webp" 
-      alt="3D Africa Map" 
-      class="w-full h-auto rounded-lg object-cover"
-    />
-    <!-- Optional overlay text -->
-    <div class="absolute inset-0 flex flex-col justify-center items-center text-white text-center bg-black/30 rounded-lg">
-    </div>
-  </div>
-</div>
+            <!-- Image -->
+            <div class="bg-primary p-6 rounded-lg shadow-lg hover:-translate-y-1 hover:shadow-xl transition-all duration-500">
+            <div class="relative w-full">
+                <img 
+                src="img/1.webp" 
+                alt="3D Africa Map" 
+                class="w-full h-auto rounded-lg object-cover"
+                />
+                <!-- Optional overlay text -->
+                <div class="absolute inset-0 flex flex-col justify-center items-center text-white text-center bg-black/30 rounded-lg">
+                </div>
+            </div>
+            </div>
 
 
         </div>
         </section>
-<!-- === CHALLENGE SECTION END === -->
+                <!-- === OUR SOLUTION SECTION START === -->
+        <section id="solution" class="py-16 px-4 sm:px-6 lg:px-8 bg-background-light dark:bg-background-dark">
+        <div class="max-w-7xl mx-auto">
+            <div class="text-center">
+            <h2 class="text-4xl font-bold tracking-tight text-text-light dark:text-text-dark sm:text-5xl">
+                Our Solution
+            </h2>
+            <p class="mt-6 max-w-3xl mx-auto text-lg text-gray-500 dark:text-gray-400">
+                We are building an <a class="text-primary font-semibold" href="#">AI-powered decision-support system</a> that analyzes health facility data, predicts shortages and outbreaks, and supports smarter planning across Africa’s Primary Health Care systems.
+            </p>
+            </div>
+
+            <div class="mt-20 grid gap-10 sm:grid-cols-1 md:grid-cols-2">
+            <!-- Card 1 -->
+            <div class="bg-card-light dark:bg-card-dark rounded-xl shadow-lg overflow-hidden border-l-4 border-indigo-400 dark:border-indigo-600">
+                <div class="p-8">
+                <div class="flex items-start">
+                    <div class="flex-shrink-0">
+                    <div class="w-12 h-12 rounded-lg bg-indigo-500 flex items-center justify-center text-white">
+                        <span class="material-symbols-outlined text-3xl">psychology</span>
+                    </div>
+                    </div>
+                    <div class="ml-5 w-0 flex-1">
+                    <h3 class="text-lg font-semibold text-text-light dark:text-text-dark">AI-Driven Analytics</h3>
+                    <p class="mt-2 text-base text-gray-500 dark:text-gray-400">
+                        Advanced machine learning models process healthcare data to identify patterns, predict challenges, and recommend evidence-based interventions in real-time.
+                    </p>
+                    </div>
+                </div>
+                </div>
+            </div>
+
+            <!-- Card 2 -->
+            <div class="bg-card-light dark:bg-card-dark rounded-xl shadow-lg overflow-hidden border-l-4 border-purple-400 dark:border-purple-600">
+                <div class="p-8">
+                <div class="flex items-start">
+                    <div class="flex-shrink-0">
+                    <div class="w-12 h-12 rounded-lg bg-purple-500 flex items-center justify-center text-white">
+                        <span class="material-symbols-outlined text-3xl">storage</span>
+                    </div>
+                    </div>
+                    <div class="ml-5 w-0 flex-1">
+                    <h3 class="text-lg font-semibold text-text-light dark:text-text-dark">Comprehensive Data Integration</h3>
+                    <p class="mt-2 text-base text-gray-500 dark:text-gray-400">
+                        Seamlessly aggregates data from WHO, World Bank, health facilities, and local sources to create a unified view of healthcare infrastructure.
+                    </p>
+                    </div>
+                </div>
+                </div>
+            </div>
+
+            <!-- Card 3 -->
+            <div class="bg-card-light dark:bg-card-dark rounded-xl shadow-lg overflow-hidden border-l-4 border-pink-400 dark:border-pink-600">
+                <div class="p-8">
+                <div class="flex items-start">
+                    <div class="flex-shrink-0">
+                    <div class="w-12 h-12 rounded-lg bg-pink-500 flex items-center justify-center text-white">
+                        <span class="material-symbols-outlined text-3xl">trending_up</span>
+                    </div>
+                    </div>
+                    <div class="ml-5 w-0 flex-1">
+                    <h3 class="text-lg font-semibold text-text-light dark:text-text-dark">Predictive Modeling</h3>
+                    <p class="mt-2 text-base text-gray-500 dark:text-gray-400">
+                        Forecast resource shortages, disease outbreaks, and capacity gaps before they become critical, enabling proactive interventions.
+                    </p>
+                    </div>
+                </div>
+                </div>
+            </div>
+
+            <!-- Card 4 -->
+            <div class="bg-card-light dark:bg-card-dark rounded-xl shadow-lg overflow-hidden border-l-4 border-blue-400 dark:border-blue-600">
+                <div class="p-8">
+                <div class="flex items-start">
+                    <div class="flex-shrink-0">
+                    <div class="w-12 h-12 rounded-lg bg-blue-500 flex items-center justify-center text-white">
+                        <span class="material-symbols-outlined text-3xl">groups</span>
+                    </div>
+                    </div>
+                    <div class="ml-5 w-0 flex-1">
+                    <h3 class="text-lg font-semibold text-text-light dark:text-text-dark">Community-Centered Design</h3>
+                    <p class="mt-2 text-base text-gray-500 dark:text-gray-400">
+                        Built with input from healthcare workers and communities to ensure accessibility, usability, and real-world impact at the grassroots level.
+                    </p>
+                    </div>
+                </div>
+                </div>
+            </div>
+            </div>
+        </div>
+        </section>
+        <!-- === OUR SOLUTION SECTION END === -->
+                <!-- === MEASURABLE IMPACT SECTION START === -->
+        <section id="impact" class="bg-background-light dark:bg-background-dark">
+        <div class="container mx-auto px-4 py-16 sm:py-24">
+            <div class="text-center">
+            <h1 class="text-4xl sm:text-5xl font-bold text-text-light dark:text-text-dark">Measurable Impact</h1>
+            <p class="mt-4 text-lg sm:text-xl text-gray-600 dark:text-gray-400 max-w-3xl mx-auto">
+                Transforming healthcare delivery across Africa through intelligent, data-driven solutions.
+            </p>
+            </div>
+
+            <div class="mt-16 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
+            <div class="bg-card-light dark:bg-card-dark rounded-xl shadow-sm p-8 flex flex-col items-start border border-border-light dark:border-border-dark transform transition-all duration-300 hover:-translate-y-2 hover:shadow-2xl">
+                <div class="w-16 h-16 bg-indigo-100 dark:bg-indigo-900/30 rounded-lg flex items-center justify-center mb-6 border-2 border-indigo-200 dark:border-indigo-500">
+                <div class="w-12 h-12 bg-indigo-500 rounded-md flex items-center justify-center">
+                    <span class="material-symbols-outlined text-white text-3xl">analytics</span>
+                </div>
+                </div>
+                <h3 class="text-xl font-semibold text-text-light dark:text-text-dark mb-2">Predictive Analytics</h3>
+                <p class="text-gray-600 dark:text-gray-400 text-base">
+                Forecast disease outbreaks and resource needs weeks in advance, enabling proactive public health responses.
+                </p>
+            </div>
+
+            <div class="bg-card-light dark:bg-card-dark rounded-xl shadow-sm p-8 flex flex-col items-start border border-border-light dark:border-border-dark transform transition-all duration-300 hover:-translate-y-2 hover:shadow-2xl">
+                <div class="w-16 h-16 bg-purple-100 dark:bg-purple-900/30 rounded-lg flex items-center justify-center mb-6 border-2 border-purple-200 dark:border-purple-500">
+                <div class="w-12 h-12 bg-purple-500 rounded-md flex items-center justify-center">
+                    <span class="material-symbols-outlined text-white text-3xl">track_changes</span>
+                </div>
+                </div>
+                <h3 class="text-xl font-semibold text-text-light dark:text-text-dark mb-2">Smart Resource Allocation</h3>
+                <p class="text-gray-600 dark:text-gray-400 text-base">
+                Optimize distribution of medicines, equipment, and personnel based on real-time demand and capacity data.
+                </p>
+            </div>
+
+            <div class="bg-card-light dark:bg-card-dark rounded-xl shadow-sm p-8 flex flex-col items-start border border-border-light dark:border-border-dark transform transition-all duration-300 hover:-translate-y-2 hover:shadow-2xl">
+                <div class="w-16 h-16 bg-pink-100 dark:bg-pink-900/30 rounded-lg flex items-center justify-center mb-6 border-2 border-pink-200 dark:border-pink-500">
+                <div class="w-12 h-12 bg-pink-500 rounded-md flex items-center justify-center">
+                    <span class="material-symbols-outlined text-white text-3xl">leaderboard</span>
+                </div>
+                </div>
+                <h3 class="text-xl font-semibold text-text-light dark:text-text-dark mb-2">Accessible Dashboards</h3>
+                <p class="text-gray-600 dark:text-gray-400 text-base">
+                User-friendly interfaces that empower healthcare workers and administrators with actionable insights at a glance.
+                </p>
+            </div>
+
+            <div class="bg-card-light dark:bg-card-dark rounded-xl shadow-sm p-8 flex flex-col items-start border border-border-light dark:border-border-dark transform transition-all duration-300 hover:-translate-y-2 hover:shadow-2xl">
+                <div class="w-16 h-16 bg-indigo-100 dark:bg-indigo-900/30 rounded-lg flex items-center justify-center mb-6 border-2 border-indigo-200 dark:border-indigo-500">
+                <div class="w-12 h-12 bg-indigo-500 rounded-md flex items-center justify-center">
+                    <span class="material-symbols-outlined text-white text-3xl">shield</span>
+                </div>
+                </div>
+                <h3 class="text-xl font-semibold text-text-light dark:text-text-dark mb-2">Policy Insights</h3>
+                <p class="text-gray-600 dark:text-gray-400 text-base">
+                Data-driven recommendations to inform national and regional healthcare policy decisions and infrastructure investments.
+                </p>
+            </div>
+            </div>
+        </div>
+        </section>
+        <!-- === MEASURABLE IMPACT SECTION END === -->
+
         <section data-w-id="073fddf2-179b-deba-f1b2-64082f39f0f4" class="footer-section">
             <div class="w-layout-blockcontainer container w-container">
                 <div class="rights-link">
@@ -249,7 +403,7 @@
                             <img loading="lazy" src="https://cdn.prod.website-files.com/67dbaf8a0c22857f90281733/67e3f092f927b51ea0ad3bd7_X.svg" alt="X Icon"/>
                         </a>
                     </div>
-                </div>x
+                </div>
             </div>
             <div class="bg-gradient">
                 <div class="bg-gradient-01"></div>
