Update index.html to change text color for better visibility in challenge statistics

--- a/index.html
+++ b/index.html
@@ -192,9 +192,9 @@
 
                 <div class="bg-card-light dark:bg-card-dark p-6 rounded-lg shadow-md hover:shadow-xl transition-all duration-300 hover:-translate-y-1">
                     <div class="flex items-start space-x-4">
-                        <span class="material-symbols-outlined text-primary text-4xl">warning</span>
+                        <span class="material-symbols-outlined text-accent text-4xl">warning</span>
                         <div>
-                        <h3 class="text-4xl font-bold text-primary">70%</h3>
+                        <h3 class="text-4xl font-bold text-accent">70%</h3>
                         <p class="mt-2 text-text-light dark:text-text-dark">
                             of health needs can be solved at PHC level, yet most centers lack diagnostic capacity
                         </p>
@@ -204,9 +204,9 @@
 
                 <div class="bg-card-light dark:bg-card-dark p-6 rounded-lg shadow-md hover:shadow-xl transition-all duration-300 hover:-translate-y-1">
                 <div class="flex items-start space-x-4">
-                    <span class="material-symbols-outlined text-primary text-4xl">diversity_3</span>
+                    <span class="material-symbols-outlined text-accent text-4xl">diversity_3</span>
                     <div>
-                    <h3 class="text-4xl font-bold text-primary">Millions</h3>
+                    <h3 class="text-4xl font-bold text-accent">Millions</h3>
                     <p class="mt-2 text-text-light dark:text-text-dark">
                         of people in underserved communities lack access to basic healthcare
                     </p>
