Update navigation link to point to challenge section

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -79,7 +79,7 @@
 
                                 <li class="list-item">
                                     <div>
-                                        <a href="/"
+                                        <a href="#challenge"
                                         class="nav-dropdown-toggle w-dropdown-toggle nav-page-link w--current"
                                         aria-current="page"
                                         role="link">
