Fixed login structure and authentication

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -87,7 +87,7 @@
 						</ul>
 					</nav>
 						<div class="nav-button-wrapper">
-							<a href="dashboard.html" class="nav-button w-inline-block">
+							<a href="login.html" class="nav-button w-inline-block">
 								<div class="embed-code w-embed">
 									<svg xmlns="http://www.w3.org/2000/svg" width="19" height="18" viewBox="0 0 19 18" fill="none">
 										<path d="M14 1.5V3M5 1.5V3" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
@@ -97,7 +97,7 @@
 										<path d="M2.75 6H16.25" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
 									</svg>
 								</div>
-								<div>Dashboard</div>
+								<div>Login</div>
 							</a>
 						</div>
 						<div class="menu-button w-nav-button">
@@ -121,7 +121,7 @@
 									<p data-w-id="f7558cbd-6aeb-41fa-a4b9-24a118915d65" style="opacity:0" class="banner-text">We use AI to predict stock-outs, support clinical triage, and help health workers make faster, smarter decisions.</p>
 								</div>
 								<div class="overflow-block">
-									<a data-w-id="864d9717-8c06-4609-86a6-7e611b1f8577" style="opacity:0" href="/about-us" class="primary-button w-button">More About Us</a>
+									<a data-w-id="864d9717-8c06-4609-86a6-7e611b1f8577" style="opacity:0" href="#challenge" class="primary-button w-button">More About Us</a>
 								</div>
 							</div>
 						</div>
