--- a/Frontend/frontline.html
+++ b/Frontend/frontline.html
@@ -60,43 +60,26 @@
             </div>
             <nav class="p-4">
                 <p class="text-xs font-semibold text-gray-500 dark:text-gray-400 uppercase">Quick Actions</p>
-                <button type="button" id="open-register" class="w-full mt-2 bg-primary text-white py-2 px-4 rounded-lg flex items-center justify-center font-semibold">
-                    <span class="material-icons mr-2">person_add</span>
-                    Register Patient
-                </button>
-                <div class="mt-6">
-                    <p class="text-xs font-semibold text-gray-500 dark:text-gray-400 uppercase">Filters</p>
-                    <ul class="mt-2 space-y-2">
-                        <li>
-                            <a class="flex items-center p-2 text-sm text-gray-700 dark:text-gray-300 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700" href="#">
-                                <span class="material-icons mr-3">today</span>
-                                Today
-                            </a>
-                        </li>
-                        <li>
-                            <a class="flex items-center p-2 text-sm text-gray-700 dark:text-gray-300 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700" href="#">
-                                Antenatal
-                            </a>
-                        </li>
-                        <li>
-                            <a class="flex items-center p-2 text-sm text-gray-700 dark:text-gray-300 rounded-lg bg-blue-100 dark:bg-blue-900 font-semibold" href="#">
-                                Malaria
-                            </a>
-                        </li>
-                        <li>
-                            <a class="flex items-center p-2 text-sm text-gray-700 dark:text-gray-300 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700" href="#">
-                                Immunization
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="mt-6">
-                    <p class="text-xs font-semibold text-gray-500 dark:text-gray-400 uppercase">Offline</p>
-                    <div class="mt-2 p-2 rounded-lg bg-yellow-100 dark:bg-yellow-900 text-yellow-800 dark:text-yellow-200 flex items-center">
-                        <span class="material-icons mr-3">sync</span>
-                        <span>24 pending</span>
-                    </div>
-                </div>
+                <ul class="mt-2 space-y-2">
+                    <li>
+                        <a href="login.html" class="w-full bg-primary text-white py-2 px-4 rounded-lg flex items-center justify-center font-semibold">
+                            <span class="material-icons mr-2">login</span>
+                            Sign Up/Sign In
+                        </a>
+                    </li>
+                    <li>
+                        <a href="index.html" class="w-full bg-gray-100 dark:bg-gray-700 text-primary py-2 px-4 rounded-lg flex items-center justify-center font-semibold">
+                            <span class="material-icons mr-2">home</span>
+                            Home
+                        </a>
+                    </li>
+                    <li>
+                        <button type="button" id="open-register" class="w-full bg-blue-600 text-white py-2 px-4 rounded-lg flex items-center justify-center font-semibold">
+                            <span class="material-icons mr-2">person_add</span>
+                            Register Patient
+                        </button>
+                    </li>
+                </ul>
             </nav>
         </aside>
 
@@ -778,8 +761,11 @@
             });
 
             document.getElementById('open-register')?.addEventListener('click', () => {
-                // open your registration panel/modal (implement UI action)
-                alert('Open registration UI (implement)');
+                // Switch to patient management tab
+                window.selectTab && window.selectTab('patient-management');
+                // Optionally scroll to registration form
+                const reg = document.getElementById('patient-management');
+                if (reg) reg.scrollIntoView({ behavior: 'smooth' });
             });
         });
     </script>
