--- a/Frontend/admin.html
+++ b/Frontend/admin.html
@@ -46,7 +46,15 @@
         <aside class="w-64 bg-white dark:bg-card-dark flex-shrink-0">
             <div class="flex items-center justify-center p-4 border-b border-border-light dark:border-border-dark">
                 <!-- changed PHC Admin -> Health Admin -->
-                <h1 class="text-xl font-bold text-primary">Health Admin</h1>
+                <h1 data-i18n="admin_title" class="text-xl font-bold text-primary">Health Admin</h1>
+                <!-- language selector -->
+                <select id="lang-select" class="ml-3 px-2 py-1 rounded text-sm">
+                    <option value="en">EN</option>
+                    <option value="yo">YO</option>
+                    <option value="sw">SW</option>
+                    <option value="ha">HA</option>
+                    <option value="fr">FR</option>
+                </select>
             </div>
             <nav class="p-4">
                 <p class="text-xs font-semibold text-gray-500 dark:text-gray-400 uppercase">Menu</p>
@@ -98,7 +106,7 @@
                 <section id="restock-requests" class="mt-6">
                     <div class="bg-white dark:bg-card-dark p-6 rounded-lg shadow">
                         <div class="flex items-center justify-between mb-4">
-                            <h2 class="text-lg font-bold">Restock Requests</h2>
+                            <h2 data-i18n="restock_requests" class="text-lg font-bold">Restock Requests</h2>
                             <div class="text-sm text-gray-500">Manage requests from PHCs</div>
                         </div>
 
@@ -260,6 +268,26 @@
 
             // initial load
             document.addEventListener('DOMContentLoaded', () => { loadAndRender(); });
+        })();
+    </script>
+    <script>
+        (function () {
+            const translations = {
+                en: { admin_title: "Health Admin", restock_requests: "Restock Requests", filter: "Filter", clear: "Clear", total_text: "Total:" },
+                yo: { admin_title: "Alákóso Ilera", restock_requests: "Ìbéèrè Ìtunse Ọjà", filter: "Àlẹ́ọ", clear: "Nu", total_text: "Lapapọ:" },
+                sw: { admin_title: "Msimamizi wa Afya", restock_requests: "Maombi ya Kuhifadhi", filter: "Chuja", clear: "Futa", total_text: "Jumla:" },
+                ha: { admin_title: "Mai Gudanarwa Lafiya", restock_requests: "Buƙatun Sake Cike", filter: "Tace", clear: "Goge", total_text: "Jimla:" },
+                fr: { admin_title: "Admin de Santé", restock_requests: "Demandes de réapprovisionnement", filter: "Filtrer", clear: "Effacer", total_text: "Total:" }
+            };
+            function apply(lang) {
+                const d = translations[lang] || translations.en;
+                document.querySelectorAll('[data-i18n]').forEach(el => { const k = el.dataset.i18n; if (!k) return; el.textContent = d[k] ?? translations.en[k] ?? el.textContent; });
+                localStorage.setItem('site_lang', lang);
+            }
+            const sel = document.getElementById('lang-select');
+            const saved = localStorage.getItem('site_lang') || 'en';
+            if (sel) { sel.value = saved; sel.addEventListener('change', (e) => apply(e.target.value)); }
+            document.addEventListener('DOMContentLoaded', () => apply(saved));
         })();
     </script>
 </body>
