--- a/Frontend/login.html
+++ b/Frontend/login.html
@@ -58,6 +58,10 @@
         .form-group.hidden {
             display: none;
         }
+        /* Generic hidden helper used by JS for non-form-group elements too */
+        .hidden {
+            display: none;
+        }
         .form-group label {
             display: block;
             font-size: 0.875rem;
@@ -134,15 +138,23 @@
 
 <div class="auth-container">
     <div class="auth-header">
-        <h1 id="form-title">Sign In</h1>
+        <h1 id="form-title" data-i18n="sign_in">Sign In</h1>
+        <!-- language selector -->
+        <select id="lang-select" class="absolute top-4 right-4 px-2 py-1 rounded text-sm">
+            <option value="en">EN</option>
+            <option value="yo">YO</option>
+            <option value="sw">SW</option>
+            <option value="ha">HA</option>
+            <option value="fr">FR</option>
+        </select>
     </div>
     <div class="auth-body">
         <form id="auth-form">
             <div id="error-message" class="hidden"></div>
 
             <div class="form-group hidden" id="full-name-group">
-                <label for="full_name">Full Name</label>
-                <input type="text" id="full_name" name="full_name" required>
+                <label for="full_name">Full Name/PHC Name</label>
+                <input type="text" id="full_name" name="full_name">
             </div>
 
             <div class="form-group">
@@ -157,124 +169,151 @@
 
             <div class="form-group hidden" id="role-group">
                 <label for="role">Your Role</label>
-                <select id="role" name="role" required>
+                <select id="role" name="role">
                     <option value="frontline_worker">Frontline Worker</option>
                     <option value="healthcare_admin">Healthcare Admin</option>
                 </select>
             </div>
 
-            <button type="submit" class="submit-btn" id="submit-button">Sign In</button>
+            <button type="submit" class="submit-btn" id="submit-button" data-i18n="sign_in_btn">Sign In</button>
         </form>
 
         <div class="toggle-auth">
-            <span id="toggle-text">Don't have an account?</span>
-            <button id="toggle-button">Sign Up</button>
-        </div>
-    </div>
-</div>
+             <span id="toggle-text" data-i18n="dont_have_account">Don't have an account?</span>
+            <button id="toggle-button" type="button" data-i18n="sign_up_btn">Sign Up</button>
+         </div>
+     </div>
+ </div>
 
-<script>
-    const API_BASE_URL = 'http://127.0.0.1:8000';
-    let isLogin = true;
-
-    const form = document.getElementById('auth-form');
-    const formTitle = document.getElementById('form-title');
-    const submitButton = document.getElementById('submit-button');
-    const toggleButton = document.getElementById('toggle-button');
-    const toggleText = document.getElementById('toggle-text');
-    const fullNameGroup = document.getElementById('full-name-group');
-    const roleGroup = document.getElementById('role-group');
-    const errorMessage = document.getElementById('error-message');
-
-    toggleButton.addEventListener('click', () => {
-        isLogin = !isLogin;
-        errorMessage.classList.add('hidden');
-        form.reset();
-
-        formTitle.textContent = isLogin ? 'Sign In' : 'Create Account';
-        submitButton.textContent = isLogin ? 'Sign In' : 'Sign Up';
-        toggleText.textContent = isLogin ? "Don't have an account?" : "Already have an account?";
-        toggleButton.textContent = isLogin ? 'Sign Up' : 'Sign In';
-
-        fullNameGroup.classList.toggle('hidden', isLogin);
-        roleGroup.classList.toggle('hidden', isLogin);
-        // ✅ Prevent the browser from validating hidden fields
-        document.getElementById('full_name').required = !isLogin;
-      document.getElementById('role').required = !isLogin;
-    });
-
-    form.addEventListener('submit', async (e) => {
-        e.preventDefault();
-        errorMessage.classList.add('hidden');
-        const formData = new FormData(form);
-
-        if (isLogin) {
-            // Handle Login
-            const loginData = new URLSearchParams();
-            loginData.append('username', formData.get('email'));
-            loginData.append('password', formData.get('password'));
-
-            try {
-                const response = await fetch(`${API_BASE_URL}/auth/login`, {
-                    method: 'POST',
-                    body: loginData,
-                    headers: { 'Content-Type': 'application/x-www-form-urlencoded' }
-                });
-                const data = await response.json();
-                if (!response.ok) throw new Error(data.detail || 'Login failed');
-                
-                // On success, save the token and role, then redirect based on role
-                localStorage.setItem('accessToken', data.access_token);
-                localStorage.setItem('userRole', data.role);
-
-                // Backend returns role values like "phc" and "health_admin"
-                if (data.role === 'phc') {
-                    window.location.href = './frontline.html';
-                } else if (data.role === 'health_admin') {
-                    window.location.href = './admin.html';
-                } else if (data.redirect_to) {
-                    // fallback to server hint
-                    window.location.href = data.redirect_to;
-                } else {
-                    // Default redirect if role is not defined or unexpected
-                    window.location.href = './dashboard.html';
-                }
-            } catch (error) {
-                errorMessage.textContent = error.message;
-                errorMessage.classList.remove('hidden');
-            }
-        } else {
-            // Handle Signup
-            const signupData = {
-                full_name: formData.get('full_name'),
-                email: formData.get('email'),
-                password: formData.get('password'),
-                role: formData.get('role'),
-            };
-
-            try {
-                const response = await fetch(`${API_BASE_URL}/auth/signup`, {
-                    method: 'POST',
-                    body: JSON.stringify(signupData),
-                    headers: { 'Content-Type': 'application/json' }
-                });
-                const data = await response.json();
-                if (!response.ok) throw new Error(data.detail || 'Signup failed');
-
-                // On success, toggle to login mode with a success message
-                toggleButton.click(); // Switch to login view
-                errorMessage.textContent = 'Account created successfully! Please sign in.';
-                errorMessage.style.color = '#22c55e'; // Green color for success
-                errorMessage.style.backgroundColor = 'rgba(34, 197, 94, 0.1)';
-                errorMessage.style.borderColor = 'rgba(34, 197, 94, 0.5)';
-                errorMessage.classList.remove('hidden');
-            } catch (error) {
-                errorMessage.textContent = error.message;
-                errorMessage.classList.remove('hidden');
-            }
-        }
-    });
-</script>
-
-</body>
-</html>
+ <script>
+     const API_BASE_URL = 'http://127.0.0.1:8000';
+     let isLogin = true;
+ 
+     const form = document.getElementById('auth-form');
+     const formTitle = document.getElementById('form-title');
+     const submitButton = document.getElementById('submit-button');
+     const toggleButton = document.getElementById('toggle-button');
+     const toggleText = document.getElementById('toggle-text');
+     const fullNameGroup = document.getElementById('full-name-group');
+     const roleGroup = document.getElementById('role-group');
+     const errorMessage = document.getElementById('error-message');
+     const fullNameInput = document.getElementById('full_name');
+     const roleInput = document.getElementById('role');
+ 
+     // Ensure inputs that start hidden are not required on initial load
+     document.addEventListener('DOMContentLoaded', () => {
+         fullNameInput.required = false;
+         roleInput.required = false;
+     });
+ 
+     toggleButton.addEventListener('click', () => {
+         isLogin = !isLogin;
+         errorMessage.classList.add('hidden');
+         form.reset();
+ 
+         formTitle.textContent = isLogin ? 'Sign In' : 'Create Account';
+         submitButton.textContent = isLogin ? 'Sign In' : 'Sign Up';
+         toggleText.textContent = isLogin ? "Don't have an account?" : "Already have an account?";
+         toggleButton.textContent = isLogin ? 'Sign Up' : 'Sign In';
+ 
+         fullNameGroup.classList.toggle('hidden', isLogin);
+         roleGroup.classList.toggle('hidden', isLogin);
+         // ✅ Prevent the browser from validating hidden fields
+         fullNameInput.required = !isLogin;
+         roleInput.required = !isLogin;
+     });
+ 
+     form.addEventListener('submit', async (e) => {
+         e.preventDefault();
+         errorMessage.classList.add('hidden');
+         const formData = new FormData(form);
+ 
+         if (isLogin) {
+             // Handle Login
+             const loginData = new URLSearchParams();
+             loginData.append('username', formData.get('email'));
+             loginData.append('password', formData.get('password'));
+ 
+             try {
+                 const response = await fetch(`${API_BASE_URL}/auth/login`, {
+                     method: 'POST',
+                     body: loginData,
+                     headers: { 'Content-Type': 'application/x-www-form-urlencoded' }
+                 });
+                 const data = await response.json();
+                 if (!response.ok) throw new Error(data.detail || 'Login failed');
+                 
+                 // On success, save the token and role, then redirect based on role
+                 localStorage.setItem('accessToken', data.access_token);
+                 localStorage.setItem('userRole', data.role);
+ 
+                 // Backend returns role values like "phc" and "health_admin"
+                 if (data.role === 'phc') {
+                     window.location.href = './frontline.html';
+                 } else if (data.role === 'health_admin') {
+                     window.location.href = './admin.html';
+                 } else if (data.redirect_to) {
+                     // fallback to server hint
+                     window.location.href = data.redirect_to;
+                 } else {
+                     // Default redirect if role is not defined or unexpected
+                     window.location.href = './dashboard.html';
+                 }
+             } catch (error) {
+                 errorMessage.textContent = error.message;
+                 errorMessage.classList.remove('hidden');
+             }
+         } else {
+             // Handle Signup
+             const signupData = {
+                 full_name: formData.get('full_name'),
+                 email: formData.get('email'),
+                 password: formData.get('password'),
+                 role: formData.get('role'),
+             };
+ 
+             try {
+                 const response = await fetch(`${API_BASE_URL}/auth/signup`, {
+                     method: 'POST',
+                     body: JSON.stringify(signupData),
+                     headers: { 'Content-Type': 'application/json' }
+                 });
+                 const data = await response.json();
+                 if (!response.ok) throw new Error(data.detail || 'Signup failed');
+ 
+                 // On success, toggle to login mode with a success message
+                 toggleButton.click(); // Switch to login view
+                 errorMessage.textContent = 'Account created successfully! Please sign in.';
+                 errorMessage.style.color = '#22c55e'; // Green color for success
+                 errorMessage.style.backgroundColor = 'rgba(34, 197, 94, 0.1)';
+                 errorMessage.style.borderColor = 'rgba(34, 197, 94, 0.5)';
+                 errorMessage.classList.remove('hidden');
+             } catch (error) {
+                 errorMessage.textContent = error.message;
+                 errorMessage.classList.remove('hidden');
+             }
+         }
+     });
+ 
+     (function(){
+	const translations = {
+		en: { sign_in: "Sign In", sign_in_btn: "Sign In", sign_up_btn: "Sign Up", dont_have_account: "Don't have an account?", create_account: "Create Account" },
+		yo: { sign_in: "Wọlé", sign_in_btn: "Wọlé", sign_up_btn: "Forúkọṣilẹ", dont_have_account: "Ṣe o kò ní àkọọlẹ?", create_account: "Ṣe Àkọọlẹ" },
+		sw: { sign_in: "Ingia", sign_in_btn: "Ingia", sign_up_btn: "Jisajili", dont_have_account: "Huna akaunti?", create_account: "Unda Akaunti" },
+		ha: { sign_in: "Shiga", sign_in_btn: "Shiga", sign_up_btn: "Yi Rajista", dont_have_account: "Babu asusu?", create_account: "Ƙirƙiri asusu" },
+		fr: { sign_in: "Connexion", sign_in_btn: "Connexion", sign_up_btn: "Inscription", dont_have_account: "Pas de compte?", create_account: "Créer un compte" }
+	};
+	function apply(lang){
+		const d = translations[lang] || translations.en;
+		document.querySelectorAll('[data-i18n]').forEach(el=>{ const k=el.dataset.i18n; if(!k) return; el.textContent = d[k] ?? translations.en[k] ?? el.textContent; });
+		localStorage.setItem('site_lang', lang);
+	}
+	const sel = document.getElementById('lang-select');
+	const saved = localStorage.getItem('site_lang') || 'en';
+	if (sel){ sel.value = saved; sel.addEventListener('change', (e)=> apply(e.target.value)); }
+	document.addEventListener('DOMContentLoaded', ()=> apply(saved));
+})();
+ </script>
+ 
+ </body>
+ </html>
