--- a/Frontend/team.html
+++ b/Frontend/team.html
@@ -105,7 +105,7 @@
         <div class="absolute inset-y-0 right-0 w-1/2 bg-primary hidden md:block" style="z-index: -1; right: -25%;"></div>
         <div class="bg-card-light dark:bg-card-dark rounded-lg shadow-lg p-6 text-center flex flex-col items-center">
         <div class="relative mb-4">
-        <img alt="Adam Jonson, Chief Operating Officer" class="w-32 h-32 rounded-full mx-auto object-cover" src="https://lh3.googleusercontent.com/aida-public/AB6AXuA1Ih1neDpEQqsZdzaaBtu6NmUMIy2viszB8j3N3YuwH4u0xd8ftdvN0ceasE_TdtPRN2TsB3YauTDg067RlUbSNatx1LcZYvKPkYP8PcfjWNOvhAI1E91QlF1WSWP6A9wVudxlcuyKVvnwhBKuUn_wFsCS3JJrYljrPabpWYMxXLR6PsOQVqPFO8M3cXpb9mqyzdXtQYYqOvo_wTte2BBvsusmb_OnqoexvOJEO-QSZwczU2RB3XIYPUaKR94kux_sDivnuPu3hPGL"/>
+        <img alt="Aderoju Abdulsallam" class="w-32 h-32 rounded-full mx-auto object-cover" src="img/1.webp"/>
         </div>
         <h3 class="text-xl font-bold text-text-light dark:text-text-dark">Aderoju Abdulsallam</h3>
         <p class="text-sm text-primary font-semibold tracking-wider">AI Engineer</p>
