--- a/Frontend/team.html
+++ b/Frontend/team.html
@@ -107,7 +107,7 @@
         <div class="relative mb-4">
         <img alt="Aderoju Abdulsallam" class="w-32 h-32 rounded-full mx-auto object-cover" src="img/1.webp"/>
         </div>
-        <h3 class="text-xl font-bold text-text-light dark:text-text-dark">Aderoju Abdulsallam</h3>
+        <h3 class="text-xl font-bold text-text-light dark:text-text-dark">Aderou Abdulsallam</h3>
         <p class="text-sm text-primary font-semibold tracking-wider">AI Engineer</p>
         <p class="mt-4 text-secondary-text-light dark:text-secondary-text-dark text-sm">
 
