--- a/Frontend/team.html
+++ b/Frontend/team.html
@@ -105,9 +105,9 @@
         <div class="absolute inset-y-0 right-0 w-1/2 bg-primary hidden md:block" style="z-index: -1; right: -25%;"></div>
         <div class="bg-card-light dark:bg-card-dark rounded-lg shadow-lg p-6 text-center flex flex-col items-center">
         <div class="relative mb-4">
-        <img alt="Aderoju Abdulsallam" class="w-32 h-32 rounded-full mx-auto object-cover" src="img/1.webp"/>
+        <img alt="Aderoju Abdulsallam" class="w-32 h-32 rounded-full mx-auto object-cover" src=""/>
         </div>
-        <h3 class="text-xl font-bold text-text-light dark:text-text-dark">Aderou Abdulsallam</h3>
+        <h3 class="text-xl font-bold text-text-light dark:text-text-dark">Aderoju Abdulsallam</h3>
         <p class="text-sm text-primary font-semibold tracking-wider">AI Engineer</p>
         <p class="mt-4 text-secondary-text-light dark:text-secondary-text-dark text-sm">
 
@@ -117,9 +117,9 @@
         </div>
         <div class="bg-card-light dark:bg-card-dark rounded-lg shadow-lg p-6 text-center flex flex-col items-center">
         <div class="relative mb-4">
-        <img alt="Marry Hudson, Director of Marketing" class="w-32 h-32 rounded-full mx-auto object-cover" src="https://lh3.googleusercontent.com/aida-public/AB6AXuCs6TPF4L81L1g30BzRymA7oRRA1iCrbFueOlRJ-v-ZPwGQS8NGaUi7U-jk3GqIXmLG27l1gxIkxS6ms43hT8B7Yp5TPcvInVrQN6sjCpK4IdRgTNYUF70JRs1dx-qjWDogDsv0m_IFWr7dZpk15zSugxhMcz8FrYfj9Wv0YidLDDKnT9639mncHHiuVzHps_GtLpGaliZXkDNt2F1y92d9y9_flRxyxNifQmRZ5ICxtqEooSA26myUQC7F4Kg6O3reev_nPardv0Ar"/>
+        <img alt="Osokoya Fiyinfoluwa" class="w-32 h-32 rounded-full mx-auto object-cover" src=""/>
         </div>
-        <h3 class="text-xl font-bold text-text-light dark:text-text-dark">David Prince Hope</h3>
+        <h3 class="text-xl font-bold text-text-light dark:text-text-dark">Osokoya Fiyinfoluwa</h3>
         <p class="text-sm text-primary font-semibold tracking-wider">======</p>
         <p class="mt-4 text-secondary-text-light dark:text-secondary-text-dark text-sm">
 
@@ -130,9 +130,9 @@
         </div>
         <div class="bg-card-light dark:bg-card-dark rounded-lg shadow-lg p-6 text-center flex flex-col items-center">
         <div class="relative mb-4">
-        <img alt="Bob Larson, Relationship Manager" class="w-32 h-32 rounded-full mx-auto object-cover" src="https://lh3.googleusercontent.com/aida-public/AB6AXuAel2SBSznvAuVYiicnN0dg8Emwm0JiZSe8RJrpbzmE9w6OgTenLpsyWyzaAHRtL1l7Vc2fHuXS6UqEm3ozbpE4GWvU4JLCOLuCeAb0JWSnqzwOSFZY5vqjfP_qDPfa0lfENu9Xt6dUGgGbYAceGREfALWDFlymWmSuzLrIDUc--lEK5x96CXQs-TC58_IU7lNLiwcJUQpiopUUWJXHbS7XPx-HozYGsMJFaJoP0upbNXYWTXxzasqDgAzjxFqBt4ViGnqpqsUsY6vI"/>
+        <img alt="David Prince" class="w-32 h-32 rounded-full mx-auto object-cover" src=""/>
         </div>
-        <h3 class="text-xl font-bold text-text-light dark:text-text-dark">Osokoya Fiyinfoluwa David</h3>
+        <h3 class="text-xl font-bold text-text-light dark:text-text-dark">David Prince</h3>
         <p class="text-sm text-primary font-semibold tracking-wider">Frontend Developer</p>
         <p class="mt-4 text-secondary-text-light dark:text-secondary-text-dark text-sm">
 
