--- a/Frontend/team.html
+++ b/Frontend/team.html
@@ -87,8 +87,8 @@
         
         <!-- Dashboard Button -->
         <a href="login.html" class="ml-6 bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700 transition-all duration-200 flex items-center space-x-2">
-            <span class="material-symbols-outlined">Dashboard</span>
-            <span>Dashboard</span>
+            <span class="material-symbols-outlined">Login</span>
+            <span>Login</span>
         </a>
         </div>
     </div>
