--- a/Frontend/login.html
+++ b/Frontend/login.html
@@ -186,7 +186,7 @@
  </div>
 
  <script>
-     const API_BASE_URL = 'http://localhost:8000';
+     const API_BASE_URL = 'https://medisense-2025-1.onrender.com';
      let isLogin = true;
  
      const form = document.getElementById('auth-form');
