--- a/Frontend/team.html
+++ b/Frontend/team.html
@@ -120,8 +120,8 @@
         <img alt="Osokoya Fiyinfoluwa" class="w-32 h-32 rounded-full mx-auto object-cover" src="img/Fiyin.webp"/>
         </div>
         <h3 class="text-xl font-bold text-text-light dark:text-text-dark">Osokoya Fiyinfoluwa</h3>
-        <p class="text-sm text-primary font-semibold tracking-wider">Frontend Developer</p>
-        <p class="mt-4 text-secondary-text-light dark:text-secondary-text-dark text-sm">A frontend developer with a focus on AI and machine learning, specializing in model development and Agentic AI systems.</p>
+        <p class="text-sm text-primary font-semibold tracking-wider">Software Engineer</p>
+        <p class="mt-4 text-secondary-text-light dark:text-secondary-text-dark text-sm">A Software Engineer with a focus on AI and machine learning, specializing in model development and Agentic AI systems.</p>
         </div>
         <div class="bg-card-light dark:bg-card-dark rounded-lg shadow-lg p-6 text-center flex flex-col items-center">
         <div class="relative mb-4">
